ça y est ça marche +css

--- a/acro.html
+++ b/acro.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-
+    <link rel="stylesheet" href="style.css" />
+    	<link rel="stylesheet" href="https://use.typekit.net/njx7fjs.css">
     <title>Acrostiches</title>
   </head>
   <body>
@@ -14,9 +15,11 @@
         <label for = "mon_prenom">Votre prénom :</label>
         <input type = "text" name = "mon_prenom" id = "mon_prenom" autofocus/>
       </p>
-
+      <div id="cparti">
         <button onclick="mon_acrostiche()">C'est parti</button>
-        <p id ="reponse"></p>
+      </div>
+        <div id ="reponse"></div>
+
 
 
   <script type="text/javascript" src="accrostiches.js"></script>
