--- a/acro.html
+++ b/acro.html
@@ -18,7 +18,9 @@
       <div id="cparti">
         <button onclick="mon_acrostiche()">C'est parti</button>
       </div>
-        <div id ="reponse"></div>
+      <div class="box1">
+        <p id ="reponse"></p>
+      </div>
 
 
 
